maze.wallfollower.WallFollowerMaze.scala.error
Compilation error:
WallFollowerMaze:2: error: not found: value random3
  var a:Int = random3()
              ^